crib/composite/cluster-services/telepresence/v1/__snapshots__/TestTelepresenceComponent_valid_props_7.snap.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traffic-manager
    app.kubernetes.io/created-by: Helm
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 2.23.3
    helm.crib.sdk/chart: telepresence-oss
    helm.crib.sdk/name: telepresence-oss
    helm.crib.sdk/namespace: test-namespace
    helm.crib.sdk/release: traffic-manager
    helm.sh/chart: telepresence-oss-2.23.3
    telepresence: manager
  name: traffic-manager
  namespace: test-namespace
spec:
  clusterIP: None
  ports:
    - name: api
      port: 8081
      targetPort: api
  selector:
    app: traffic-manager
    telepresence: manager
  type: ClusterIP
