crib/composite/cluster-services/telepresence/v1/__snapshots__/TestTelepresenceComponent_valid_props_14.snap.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app: traffic-manager
    app.kubernetes.io/created-by: Helm
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 2.22.6
    helm.crib.sdk/chart: telepresence-oss
    helm.crib.sdk/name: telepresence-oss
    helm.crib.sdk/namespace: test-namespace
    helm.crib.sdk/release: traffic-manager
    helm.sh/chart: telepresence-oss-2.22.6
    telepresence: manager
  name: agent-injector-webhook-test-namespace
  namespace: test-namespace
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lSQUlmdDRIZ0d4S0FoaUtLM2VyWERmbUl3RFFZSktvWklodmNOQVFFTEJRQXcKSERFYU1CZ0dBMVVFQXhNUllXZGxiblF0YVc1cVpXTjBiM0l0WTJFd0hoY05NalV3TnpFM01EZzFNekF4V2hjTgpNall3TnpFM01EZzFNekF4V2pBY01Sb3dHQVlEVlFRREV4RmhaMlZ1ZEMxcGJtcGxZM1J2Y2kxallUQ0NBU0l3CkRRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFLditZeVZNdjNJN0FnWGtIbkwzcGpxRWZrZTEKT25YSmtMSXNMbFVNTGxQQXdFaEFBRzkwNmxVR2Y5a2FBeWxBWllDbGNYbTBlVkVJeTBrMDhTSWpOaFdTcUpQRgpYaEZKTnNtNmht [...]
      service:
        name: agent-injector
        namespace: test-namespace
        path: /traffic-agent
        port: 443
    failurePolicy: Ignore
    name: agent-injector-test-namespace.telepresence.io
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - test-namespace
    reinvocationPolicy: IfNeeded
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - DELETE
        resources:
          - pods
        scope: "*"
    sideEffects: None
    timeoutSeconds: 5
